--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
 	<title>Webpage with JS</title>
   </head>
   <body>
-	  <div class="menu">
-		  <!-- Menu icon -->
-		  <div class="icon-close">
-			<img src="http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/close.png">
-		  </div><!--End of icon-close-->
+	    <div class="menu">
 		  <ul>
 			<li><a href="#">Beaches</a></li>
 			<li><a href="#">Top 10</a></li>
@@ -21,26 +17,25 @@
 		</div><!--End of menu-->
 		
 		<div class="sand">
-			<div class="icon-menu">
-			<h1>MENU</h1>
-			</div>
 			<div class="title">
 			<h1>The best beaches in the world...</h1>
 			</div>
-			<div class="sea_star">
-			<a href="#"><img src="img/sea_star.png"/ alt="Beaches"></a>
+			<div class="main-btn-container">
+				<div class="main-btn">
+					<a href="#"><img src="img/sea_star.png"/ alt="Beaches"></a>
+				</div><div class="main-btn">
+					<a href="#"><img src="img/pearl.png"/ alt="Top 10"></a>
+				</div><div class="main-btn">
+					<a href="#"><img src="img/seahorse.png"/ alt="Blog"></a>
+				</div><div class="main-btn">
+				<a href="#"><img src="img/coral.png"/ alt="Contact"></a>
+				</div>
 			</div>
-			<div class="sea_star">
-			<a href="#"><img src="img/pearl.png"/ alt="Top 10"></a>
-			</div>
-			<div class="sea_star">
-			<a href="#"><img src="img/seahorse.png"/ alt="Blog"></a>
-			</div>
-			<div class="sea_star">
-			<a href="#"><img src="img/coral.png"/ alt="Contact"></a>
-			</div>
-		</div><!--End of piasek-->
+		</div><!--End of sand-->
    
+		<div class="icon-menu">
+			<h1>MENU</h1>
+		</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
   </body>
