--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
-  <head>
-	<meta charset="UTF-8"/>
-    <link href="css/style.css" rel="stylesheet"/>
-	<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"/>
-	<title>Webpage with JS</title>
-  </head>
-  <body>
-	    <div class="menu">
+	<head>
+		<meta charset="UTF-8"/>
+		<link href="css/style.css" rel="stylesheet"/>
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet"/>
+		<title>Webpage with JS</title>
+	</head>
+	<body>
+	    <div id="menu">
 		  <ul>
 			<li><a href="#">Beaches</a></li>
 			<li><a href="#">Top 10</a></li>
@@ -16,11 +16,11 @@
 		  </ul>
 		</div><!--End of menu-->
 		
-		<div class="sand">
-			<div class="title">
-			<h1>The best beaches in the world...</h1>
-			</div>
-			<div class="main-btn-container">
+		<div id="sand">
+			<h1 id="title">
+			The best beaches in the world...
+			</h1>
+			<div id="main-btn-container">
 				<div class="main-btn">
 					<a href="#"><img src="img/sea_star.png"/ alt="Beaches"></a>
 				</div><div class="main-btn">
@@ -28,15 +28,13 @@
 				</div><div class="main-btn">
 					<a href="#"><img src="img/seahorse.png"/ alt="Blog"></a>
 				</div><div class="main-btn">
-				<a href="#"><img src="img/coral.png"/ alt="Contact"></a>
+					<a href="#"><img src="img/coral.png"/ alt="Contact"></a>
 				</div>
 			</div>
 		</div><!--End of sand-->
    
-		<div class="icon-menu">
-			<h1>MENU</h1>
-		</div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="js/script.js"></script>
-  </body>
+		<div id="icon-menu">MENU</div>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script src="js/script.js"></script>
+	</body>
 </html>
